Por problemas con el factorial y pasarlo a String, finalmente he optado por la solución de http://rianjs.net/2011/05/java-solution-to-project-euler-problem-20